# pxrr

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CONTRIBUTING.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  docs.yml.dump  pre-commit.yml
docs/source/: conf.py  index.rst  installation.rst  usage.rst
example/: Draft1-OPLS.ipynb  QxyDependencyTest.ipynb  draft2_opls.ipynb  pXRR_step1.ipynb  pXRR_step2.ipynb  pxrr_run_example.ipynb  pxrr_step_example.ipynb
example/testing_data/: XRR-10mM_CaCl2_pH7p03_100ppm_PFOA_1.txt  gixos_metadata.yaml  refl_recSlit.txt
example/testing_data/CaCl2_data/: instrument-id46392.txt  instrument-id46394.txt  instrument-id46398.txt  instrument-id46400.txt
example/testing_data/output/: instrument_pseudo_qx.txt
pseudo_xrr/: Dependency.py  QxyDependencyTest.ipynb  Rectangular_Slit.py  _version.py  data_io.py  draft2_opls.ipynb  plots.py  slit.py
pseudo_xrr/CaCl2_data/: instrument-id46393.txt  instrument-id46395.txt  instrument-id46396.txt  instrument-id46397.txt  instrument-id46399.txt  instrument-id46401.txt
pxrr/: Dependency.py  data_io.py  dependency.py  gixos.py  gixos_dependency.py  metadata_test.yaml  plots.py  preprocess.py  pxrr.py  slit.py
