[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pseudo_xrr"
version = "0.1.0"
description = "Package for X-ray reflectivity and GIXOS data analysis"
readme = "README.rst"
authors = [{ name = "AUTHORS.rst" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "pyyaml",
    "ipython",
    "joblib"
]

[project.urls]
"Homepage" = "https://github.com/username/pseudo_xrr"
"Bug Tracker" = "https://github.com/username/pseudo_xrr/issues"

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
