[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxrr"
version = "0.1.0"
description = "Package for pseudo X-ray reflectivity and GIXOS data analysis"
readme = "README.rst"
authors = [{ name = "AUTHORS.rst" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "ipython",
    "joblib",
    "matplotlib",
    "numpy",
    "pandas",
    "pyyaml",
    "scipy",
]

[project.urls]
"Homepage" = "https://github.com/nsls2/pxrr"
"Bug Tracker" = "https://github.com/nsls2/pxrr/issues"

[tool.black]
line-length = 115
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

# Default environment

[tool.pixi.pypi-dependencies]
pxrr = { path = ".", editable = true }

[tool.pixi.tasks]

# Dev environment

[tool.pixi.feature.dev.dependencies]
pre-commit = "*"
python = "<3.13"

[tool.pixi.feature.dev.tasks]
lint = "pre-commit run --all-files"

[tool.pixi.dependencies]
ipython = "*"
ipykernel = ">=6.30.1,<7"
